Fix ppc build after "8050147: StoreLoad barrier interferes with stack usages"

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • b32
    • ppc

        The change for "8050147: StoreLoad barrier interferes with stack usages" also updated the relevant ppc files but unfortunately it introduced a type and an incorrect signature.

        The fix is trivial.

              Assignee:
              Volker Simonis
              Reporter:
              Volker Simonis
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: