8057780: Fix ppc build after "8050147: StoreLoad barrier interferes with stack usages

Reviewed-by: kvn, shade