hotspot/src/os_cpu/aix_ppc/vm/os_aix_ppc.cpp
@@ -564,7 +564,7 @@ void os::verify_stack_alignment() {
 }
 #endif
 
-void os::extra_bang_size_in_bytes() {
+int os::extra_bang_size_in_bytes() {
   // PPC does not require the additional stack bang.
   return 0;
 }
